gen/simplifiedJavaParser.py
# Generated from C:/Reposit�rios/Projetos/UFPI/Compiladores/Simplified-Java-Compiler\simplifiedJava.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class simplifiedJavaParser ( Parser ):

    grammarFileName = "simplifiedJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'end'", "'('", "')'", "':'", "'void'", 
                     "','", "'main'", "'var'", "';'", "'const'", "'return'", 
                     "'break'", "'if'", "'else'", "'while'", "'='", "'print'", 
                     "'scanf'", "'!'", "'-'", "'*'", "'/'", "'+'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'!='", "'int'", "'float'", 
                     "'str'", "'bool'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INT", "FLOAT", "STRING", 
                      "BOOL", "ID", "OneLineComment", "MultiLineComment", 
                      "WS" ]

    RULE_program = 0
    RULE_functionsBlock = 1
    RULE_function = 2
    RULE_functionDeclaration = 3
    RULE_declarationParametersList = 4
    RULE_mainFunction = 5
    RULE_variableDeclarationArea = 6
    RULE_variableDeclaration = 7
    RULE_cmdBlock = 8
    RULE_command = 9
    RULE_controlCmd = 10
    RULE_ifCmd = 11
    RULE_elseCmd = 12
    RULE_whileCmd = 13
    RULE_attributionList = 14
    RULE_attributionCmd = 15
    RULE_ioCmd = 16
    RULE_expressionList = 17
    RULE_expression = 18
    RULE_functionCall = 19
    RULE_variableList = 20
    RULE_type = 21
    RULE_literal = 22

    ruleNames =  [ "program", "functionsBlock", "function", "functionDeclaration", 
                   "declarationParametersList", "mainFunction", "variableDeclarationArea", 
                   "variableDeclaration", "cmdBlock", "command", "controlCmd", 
                   "ifCmd", "elseCmd", "whileCmd", "attributionList", "attributionCmd", 
                   "ioCmd", "expressionList", "expression", "functionCall", 
                   "variableList", "type", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    INT=34
    FLOAT=35
    STRING=36
    BOOL=37
    ID=38
    OneLineComment=39
    MultiLineComment=40
    WS=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainFunction(self):
            return self.getTypedRuleContext(simplifiedJavaParser.MainFunctionContext,0)


        def EOF(self):
            return self.getToken(simplifiedJavaParser.EOF, 0)

        def functionsBlock(self):
            return self.getTypedRuleContext(simplifiedJavaParser.FunctionsBlockContext,0)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):
        localctx = simplifiedJavaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 46
                self.functionsBlock()


            self.state = 49
            self.mainFunction()
            self.state = 50
            self.match(simplifiedJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionsBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplifiedJavaParser.FunctionContext)
            else:
                return self.getTypedRuleContext(simplifiedJavaParser.FunctionContext,i)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_functionsBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionsBlock" ):
                listener.enterFunctionsBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionsBlock" ):
                listener.exitFunctionsBlock(self)




    def functionsBlock(self):

        localctx = simplifiedJavaParser.FunctionsBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionsBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self.function()
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==38):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDeclaration(self):
            return self.getTypedRuleContext(simplifiedJavaParser.FunctionDeclarationContext,0)


        def variableDeclarationArea(self):
            return self.getTypedRuleContext(simplifiedJavaParser.VariableDeclarationAreaContext,0)


        def cmdBlock(self):
            return self.getTypedRuleContext(simplifiedJavaParser.CmdBlockContext,0)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = simplifiedJavaParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.functionDeclaration()
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 58
                self.variableDeclarationArea()


            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 274878347264) != 0):
                self.state = 61
                self.cmdBlock()


            self.state = 64
            self.match(simplifiedJavaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(simplifiedJavaParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(simplifiedJavaParser.TypeContext,0)


        def declarationParametersList(self):
            return self.getTypedRuleContext(simplifiedJavaParser.DeclarationParametersListContext,0)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = simplifiedJavaParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(simplifiedJavaParser.ID)
            self.state = 67
            self.match(simplifiedJavaParser.T__1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 16106127360) != 0):
                self.state = 68
                self.declarationParametersList()


            self.state = 71
            self.match(simplifiedJavaParser.T__2)
            self.state = 72
            self.match(simplifiedJavaParser.T__3)
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30, 31, 32, 33]:
                self.state = 73
                self.type_()
                pass
            elif token in [5]:
                self.state = 74
                self.match(simplifiedJavaParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationParametersListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplifiedJavaParser.TypeContext)
            else:
                return self.getTypedRuleContext(simplifiedJavaParser.TypeContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(simplifiedJavaParser.ID)
            else:
                return self.getToken(simplifiedJavaParser.ID, i)

        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_declarationParametersList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationParametersList" ):
                listener.enterDeclarationParametersList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationParametersList" ):
                listener.exitDeclarationParametersList(self)




    def declarationParametersList(self):

        localctx = simplifiedJavaParser.DeclarationParametersListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declarationParametersList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.type_()
            self.state = 78
            self.match(simplifiedJavaParser.ID)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 79
                self.match(simplifiedJavaParser.T__5)
                self.state = 80
                self.type_()
                self.state = 81
                self.match(simplifiedJavaParser.ID)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclarationArea(self):
            return self.getTypedRuleContext(simplifiedJavaParser.VariableDeclarationAreaContext,0)


        def cmdBlock(self):
            return self.getTypedRuleContext(simplifiedJavaParser.CmdBlockContext,0)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_mainFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainFunction" ):
                listener.enterMainFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainFunction" ):
                listener.exitMainFunction(self)




    def mainFunction(self):

        localctx = simplifiedJavaParser.MainFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mainFunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(simplifiedJavaParser.T__6)
            self.state = 89
            self.match(simplifiedJavaParser.T__3)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 90
                self.variableDeclarationArea()


            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 274878347264) != 0):
                self.state = 93
                self.cmdBlock()


            self.state = 96
            self.match(simplifiedJavaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationAreaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplifiedJavaParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(simplifiedJavaParser.VariableDeclarationContext,i)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_variableDeclarationArea

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclarationArea" ):
                listener.enterVariableDeclarationArea(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclarationArea" ):
                listener.exitVariableDeclarationArea(self)




    def variableDeclarationArea(self):

        localctx = simplifiedJavaParser.VariableDeclarationAreaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableDeclarationArea)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(simplifiedJavaParser.T__7)
            self.state = 99
            self.match(simplifiedJavaParser.T__3)
            self.state = 101 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 100
                    self.variableDeclaration()

                else:
                    raise NoViableAltException(self)
                self.state = 103 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableList(self):
            return self.getTypedRuleContext(simplifiedJavaParser.VariableListContext,0)


        def type_(self):
            return self.getTypedRuleContext(simplifiedJavaParser.TypeContext,0)


        def attributionList(self):
            return self.getTypedRuleContext(simplifiedJavaParser.AttributionListContext,0)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = simplifiedJavaParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variableDeclaration)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.variableList()
                self.state = 106
                self.match(simplifiedJavaParser.T__3)
                self.state = 107
                self.type_()
                self.state = 108
                self.match(simplifiedJavaParser.T__8)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(simplifiedJavaParser.T__9)
                self.state = 111
                self.attributionList()
                self.state = 112
                self.match(simplifiedJavaParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplifiedJavaParser.CommandContext)
            else:
                return self.getTypedRuleContext(simplifiedJavaParser.CommandContext,i)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_cmdBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdBlock" ):
                listener.enterCmdBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdBlock" ):
                listener.exitCmdBlock(self)




    def cmdBlock(self):

        localctx = simplifiedJavaParser.CmdBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cmdBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 116
                self.command()
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 274878347264) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def controlCmd(self):
            return self.getTypedRuleContext(simplifiedJavaParser.ControlCmdContext,0)


        def attributionCmd(self):
            return self.getTypedRuleContext(simplifiedJavaParser.AttributionCmdContext,0)


        def ioCmd(self):
            return self.getTypedRuleContext(simplifiedJavaParser.IoCmdContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(simplifiedJavaParser.FunctionCallContext,0)


        def expression(self):
            return self.getTypedRuleContext(simplifiedJavaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = simplifiedJavaParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_command)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.controlCmd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.attributionCmd()
                self.state = 123
                self.match(simplifiedJavaParser.T__8)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.ioCmd()
                self.state = 126
                self.match(simplifiedJavaParser.T__8)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.functionCall()
                self.state = 129
                self.match(simplifiedJavaParser.T__8)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 131
                self.match(simplifiedJavaParser.T__10)
                self.state = 132
                self.expression(0)
                self.state = 133
                self.match(simplifiedJavaParser.T__8)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 135
                self.match(simplifiedJavaParser.T__11)
                self.state = 136
                self.match(simplifiedJavaParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ControlCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifCmd(self):
            return self.getTypedRuleContext(simplifiedJavaParser.IfCmdContext,0)


        def whileCmd(self):
            return self.getTypedRuleContext(simplifiedJavaParser.WhileCmdContext,0)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_controlCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterControlCmd" ):
                listener.enterControlCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitControlCmd" ):
                listener.exitControlCmd(self)




    def controlCmd(self):

        localctx = simplifiedJavaParser.ControlCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_controlCmd)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.ifCmd()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.whileCmd()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(simplifiedJavaParser.ExpressionContext,0)


        def cmdBlock(self):
            return self.getTypedRuleContext(simplifiedJavaParser.CmdBlockContext,0)


        def elseCmd(self):
            return self.getTypedRuleContext(simplifiedJavaParser.ElseCmdContext,0)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_ifCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfCmd" ):
                listener.enterIfCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfCmd" ):
                listener.exitIfCmd(self)




    def ifCmd(self):

        localctx = simplifiedJavaParser.IfCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifCmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(simplifiedJavaParser.T__12)
            self.state = 144
            self.match(simplifiedJavaParser.T__1)
            self.state = 145
            self.expression(0)
            self.state = 146
            self.match(simplifiedJavaParser.T__2)
            self.state = 147
            self.match(simplifiedJavaParser.T__3)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 274878347264) != 0):
                self.state = 148
                self.cmdBlock()


            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 151
                self.elseCmd()


            self.state = 154
            self.match(simplifiedJavaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmdBlock(self):
            return self.getTypedRuleContext(simplifiedJavaParser.CmdBlockContext,0)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_elseCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseCmd" ):
                listener.enterElseCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseCmd" ):
                listener.exitElseCmd(self)




    def elseCmd(self):

        localctx = simplifiedJavaParser.ElseCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_elseCmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(simplifiedJavaParser.T__13)
            self.state = 157
            self.match(simplifiedJavaParser.T__3)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 274878347264) != 0):
                self.state = 158
                self.cmdBlock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(simplifiedJavaParser.ExpressionContext,0)


        def cmdBlock(self):
            return self.getTypedRuleContext(simplifiedJavaParser.CmdBlockContext,0)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_whileCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileCmd" ):
                listener.enterWhileCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileCmd" ):
                listener.exitWhileCmd(self)




    def whileCmd(self):

        localctx = simplifiedJavaParser.WhileCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_whileCmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(simplifiedJavaParser.T__14)
            self.state = 162
            self.match(simplifiedJavaParser.T__1)
            self.state = 163
            self.expression(0)
            self.state = 164
            self.match(simplifiedJavaParser.T__2)
            self.state = 165
            self.match(simplifiedJavaParser.T__3)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 274878347264) != 0):
                self.state = 166
                self.cmdBlock()


            self.state = 169
            self.match(simplifiedJavaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributionCmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplifiedJavaParser.AttributionCmdContext)
            else:
                return self.getTypedRuleContext(simplifiedJavaParser.AttributionCmdContext,i)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_attributionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributionList" ):
                listener.enterAttributionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributionList" ):
                listener.exitAttributionList(self)




    def attributionList(self):

        localctx = simplifiedJavaParser.AttributionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_attributionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.attributionCmd()
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 172
                self.match(simplifiedJavaParser.T__5)
                self.state = 173
                self.attributionCmd()
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributionCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(simplifiedJavaParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(simplifiedJavaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return simplifiedJavaParser.RULE_attributionCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributionCmd" ):
                listener.enterAttributionCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributionCmd" ):
                listener.exitAttributionCmd(self)




    def attributionCmd(self):
